# Copyright 2014 University Corporation for Atmospheric Research
#
# This file is part of the Unidata LDM package.  See the file COPYRIGHT in
# the top-level source-directory of the package for copying and redistribution
# conditions.
#
# Process this file with automake(1) to produce file Makefile.in

noinst_LTLIBRARIES	= lib.la
lib_la_SOURCES		= TcpSend.cpp TcpSend.h vcmtpSendv3.cpp vcmtpSendv3.h \
			  UdpSend.cpp UdpSend.h \
			  senderMetadata.cpp senderMetadata.h \
			  SendAppNotifier.h
lib_la_CPPFLAGS		= -I$(srcdir)/..
